Feat: Stack creation + starting and stopping
